# velo

./: .gitattributes  .gitignore  README.md  pyproject.toml
analysis_git200/data/full/: all_tracks_test.csv
analysis_git200/data/processed_dataset/: episodes_rejected.csv  episodes_summary.csv  trajectories_tidy.parquet
analysis_git200/src/path_analysis/: bundle_overlay.py  csv_postprocess.py  per_episode_overlay.py
analysis_git200/src/video_processing/: analyze_tracks_csv.py  build_sample_image.py  light_trigger.py  main.py  run_pipeline.py  run_pipeline_test.py  sample_crop.py  tracker_segment.py
